--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
                 srcset=""
                 height="300"
                 width="300"></td>
-            <td> <h1>Justin French-Kazee</h1>
+            <td> <h1>Justin F-K</h1>
                 <p><em>Emergency Physician<br>Hobbyist Photographer</em></p>
-                <p>Emergency physician, tech geek, and gamer from West Virginia.</p>
+                <p>Emergency physician, tech geek, and gamer.</p>
             </td>
         </tr>
     </table>
