hiding contact info

--- a/contact.html
+++ b/contact.html
@@ -8,8 +8,8 @@
 </head>
 <body>
     <h3>Contact Info</h3>
-    <strong>Email:</strong>  bio.jmk@gmail.com<br> <br>
-    <strong>Phone:</strong>  304-942-5332 <br> <br> <br>
+    <strong>Email:</strong>  *******@gmail.com<br> <br>
+    <strong>Phone:</strong>  304-***-**** <br> <br> <br>
 <p>
     <hr>
     <form action="mailto:bio.jmk@gmail.com" method="post" enctype="text/plain"><strong>Your contact info:</strong> <br> <br>
