--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
                 srcset=""
                 height="300"
                 width="300"></td>
-            <td> <h1>Justin F-K</h1>
+            <td> <h1>Justin FK</h1>
                 <p><em>Emergency Physician<br>Hobbyist Photographer</em></p>
                 <p>Emergency physician, tech geek, and gamer.</p>
             </td>
